--- a/css/estilos.css
+++ b/css/estilos.css
@@ -159,7 +159,7 @@ footer {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
-  font-size: 0.6em;
+  font-size: 14px;
   width: 100%;
   
 }
